# polyglot

./: .gitignore  Makefile  README.md  pyproject.toml
README/: ideas.md  polyglot-backend.md  polyglot-frontend.md
README/katas/: BestTimeToBuySellStock.md  MergeSortedArray.md  bestTimeToBuyAndSellStock.md  binarySearch.md  boggle.md  candy.md  containerWithMostWater.md  fibonacci.md  findPivotIndex.md  findTheIndexOfTheFirstOccurrenceInAString.md  find_in_string.md  gasStation.md  hIndex.md  hello_world.md  index.md  insertDeleteGetRandom.md  integerToRoman.md  (+25 more)
backend-go/: main.go
backend-js/: tsconfig.build.tsbuildinfo
backend-py/: app.py
src/python/: .coverage  pyproject.toml
src/python/katas/: best_time_to_buy_and_sell_stock.py  binary_search.py  boggle.py  candy.py  fibonacci.py  find_in_string.py  find_the_index_of_the_first_occurrence_in_a_string.py  remove_element.py  testRotateArray.py
src/python/playground/: annotations_play.py  builtins_play.py  class_play.py  exception_groups_play.py  exceptions_play.py  file_play.py  http_play.py  json_play.py  nonlocal_play.py  path_play.py  regex_play.py
src/python/playground/data/: file.txt
src/python/polyglot-backend-py/: app.py  main.py  pyproject.toml  reorganize_to_languages.py
src/python/polyglot-cli-py/: prog-learn.py
src/python/polyglot-cli-py/db_maintenance/: export_to_yaml.py
src/python/pylearn/: cli.py  concepts.py  config.py  db.py  editor.py  kata_inventory.py  migrate_leetcode.py  prog-learn.py  yaml_add_missing_tags.py  yaml_export.py  yaml_helpers.py  yaml_ingest.py
src/python/pylearn.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/python/pylearn/actions/: concepts.py  enter_dojo.py  ingest_upsert_helper.py  ingest_validation_helpers.py  kata.py  kata_inventory.py  test_runner.py  trackables.py  yaml_add_missing_tags.py  yaml_export.py  yaml_helpers.py  yaml_ingest.py
src/python/pylearn/actions/kata/: common.py  enter_dojo.py  handle_kata.py  kata_inventory.py  test_runner.py
src/python/pylearn/actions/yaml/: ingest_upsert_helpers.py  ingest_validation_helpers.py  yaml_add_missing_tags.py  yaml_export.py  yaml_helpers.py  yaml_ingest.py
src/python/pylearn/db_maintenance/: add_missing_tags.py  ingest_upsert_helpers.py  inventory_katas.py
src/python/python-playground/: named_tuple.py  regex.py
src/python/scripts/: add_missing_tags.py  migrate_journal.py  rename_to_snake_case.py
src/python/tests/katas/: test_best_time_to_buy_sell_stock.py  test_binary_search.py  test_boggle.py  test_fibonacci.py  test_find_in_string.py  test_hello_world.py  test_merge_sorted_array.py  test_remove_element.py  test_rotate_array.py
(+33 files in other folders)
