[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pylearn"
version = "0.1.0"
description = "CLI study tool for learning programming concepts in Python using a shared polyglot SQLite DB."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Jamal Dawson" }
]
dependencies = [
  "python-dotenv>=1.0.0",
  "pyyaml>=6.0.3",
]

[project.scripts]
pylearn = "pylearn.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=9.0.2",
  "ruff>=0.6.0",
]

[tool.setuptools.packages.find]
where = ["src/python"]
include = ["pylearn"]

[tool.setuptools.package-data]
# If you ever want to ship the DB or other resources inside the package
pylearn = ["../db/*.db", "../katas/**"]

[tool.pytest.ini_options]
addopts = "-vv --strict-markers --maxfail=1 --durations=5 --disable-warnings"
# Full stack traces
# addopts = "-vv -s --strict-markers …"
# Show absolute test paths
# addopts = "-vv --full-trace --verbose --show-capture=all"
# strict
# addopts = "-vv --strict-markers --strict-config"
testpaths = [
    "src/python/tests"
]
python_files = [
    "test_*.py",
    "*_test.py"
]
