[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --strict-markers --cov=katas --cov-report=term-missing"
testpaths = ["tests", "katas"]
pythonpath = ["."]
python_files = ["test*.py", "*_test.py", "test_*.py"]
